Change List.of to Arrays.asList to fix compilation issue.